--- a/templates/camion/index.html.twig
+++ b/templates/camion/index.html.twig
@@ -1,65 +1,75 @@
-{% extends 'base.html.twig' %}
+{% extends 'camion/base.html.twig' %}
 
 {% block title %}Camion Index{% endblock %}
 
+{% block stylesheets %}
+    <style>
+        .table th, .table td {
+            vertical-align: middle;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
-    <div class=" mt-4">
-        <h1 class="text-center">Gestion des Camions </h1>
-        
-        <div class="mb-3">
-            <a href="{{ path('app_camion_new') }}" class="btn btn-primary">Ajouter</a>
-        </div> <!-- Utiliser la classe table-responsive -->
-            <table class="table table-bordered w-100">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Remorque</th>
-                        <th scope="col">Date d'Intégration</th>
-                        <th scope="col">Location</th>
-                        <th scope="col">Statut</th>
-                        <th scope="col">Type Compte</th>
-                        <th scope="col">Tracteur</th>
-                        <th scope="col">Categorie</th>
-                        <th scope="col">Observation</th>
-                        <th scope="col">Km Actuel</th>
-                        <th scope="col">Actions</th>
-                    </tr>
+    <div class="container mt-5">
+        <h1 class="mb-4"><i class="fas fa-list"></i> Liste des Camions</h1>
+
+        <form method="get" action="{{ path('app_camion_index') }}" class="mb-4">
+            <div class="input-group">
+                <input type="text" name="search" class="form-control" placeholder="Rechercher...">
+                <div class="input-group-append">
+                    <button class="btn btn-secondary" type="submit"><i class="fa fa-search"></i> Rechercher</button>
+                </div>
+            </div>
+        </form>
+
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Remorque</th>
+                    <th>Date d'Intégration</th>
+                    <th>Catégories</th>
+                    <th>Type</th>
+                    <th>Location</th>
+                    <th>Statut</th>
+                    <th>Actions</th>
+                </tr>
                 </thead>
                 <tbody>
-                    {% for camion in camions %}
-                        <tr>
-                            <td>{{ camion.id }}</td>
-                            <td>{{ camion.remorque }}</td>
-                            <td>{{ camion.dateIntegration ? camion.dateIntegration|date('Y-m-d') : '' }}</td>
-                            <td>{{ camion.location }}</td>
-                            <td>{{ camion.statut }}</td>
-                            <td>{{ camion.typeCamion.nom}}</td>
-                            <td>{{ camion.tracteur.nom }}</td>
-                            <td>{{ camion.categorie.nom }}</td>
-                            <td>{{ camion.observation }}</td>
-                            <td>{{ camion.kmActuel }}</td>
-                            <td>
-                                <a href="{{ path('app_camion_show', {'id': camion.id}) }}" class="btn btn-info btn-sm">
-                                    <i class="fas fa-eye"></i> Show
-                                </a>
-                                <a href="{{ path('app_camion_edit', {'id': camion.id}) }}" class="btn btn-warning btn-sm">
-                                    <i class="fas fa-edit"></i> Edit
-                                </a>
-                                <form method="post" action="{{ path('app_camion_delete', {'id': camion.id}) }}" style="display:inline-block;" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ camion.id) }}">
-                                    <button class="btn btn-danger btn-sm">
-                                        <i class="fas fa-trash-alt"></i> Delete
-                                    </button>
-                                </form>
-                            </td>
-                        </tr>
-                    {% else %}
-                        <tr>
-                            <td colspan="8" class="text-center">Aucun Enregistrement !</td>
-                        </tr>
-                    {% endfor %}
+                {% for camion in camions %}
+                    <tr>
+                        <td>{{ camion.id }}</td>
+                        <td>{{ camion.remorque }}</td>
+                        <td>{{ camion.dateIntegration ? camion.dateIntegration|date('Y-m-d') : '' }}</td>
+                        <td>{{ camion.typeCamion.nom }}</td>
+                        <td>{{ camion.categorie.nom }}</td>
+                        <td>{{ camion.location }}</td>
+                        <td>{{ camion.statut }}</td>
+                        <td>
+                            <a href="{{ path('app_camion_show', {'id': camion.id}) }}" class="btn btn-info btn-sm">
+                                <i class="fas fa-eye"></i>
+                            </a>
+                            <a href="{{ path('app_camion_edit', {'id': camion.id}) }}" class="btn btn-primary btn-sm">
+                                <i class="fas fa-edit"></i> 
+                            </a>
+                            <form method="post" action="{{ path('app_camion_delete', {'id': camion.id}) }}" style="display:inline-block" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ camion.id) }}">
+                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
+                            </form>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="6">Aucun enregistrement trouvé</td>
+                    </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
+        <a href="{{ path('app_camion_new') }}" class="btn btn-success">
+            <i class="fas fa-plus-circle"></i> Ajouter un nouveau
+        </a>
     </div>
 {% endblock %}
