--- a/templates/camion/show.html.twig
+++ b/templates/camion/show.html.twig
@@ -1,46 +1,76 @@
-{% extends 'base.html.twig' %}
+{% extends 'camion/base.html.twig' %}
 
-{% block title %}Camion{% endblock %}
+{% block title %}Détails Camion{% endblock %}
+
+{% block stylesheets %}
+    <style>
+        .table th, .table td {
+            vertical-align: middle;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    <h1>Camion</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ camion.id }}</td>
-            </tr>
-            <tr>
-                <th>Remorque</th>
-                <td>{{ camion.remorque }}</td>
-            </tr>
-            <tr>
-                <th>DateIntegration</th>
-                <td>{{ camion.dateIntegration ? camion.dateIntegration|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Location</th>
-                <td>{{ camion.location }}</td>
-            </tr>
-            <tr>
-                <th>Statut</th>
-                <td>{{ camion.statut }}</td>
-            </tr>
-            <tr>
-                <th>Observation</th>
-                <td>{{ camion.observation }}</td>
-            </tr>
-            <tr>
-                <th>KmActuel</th>
-                <td>{{ camion.kmActuel }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_camion_index') }}">back to list</a>
-
-    <a href="{{ path('app_camion_edit', {'id': camion.id}) }}">edit</a>
-
-    {{ include('camion/_delete_form.html.twig') }}
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header">
+                <h1 class="mb-0"><i class="fas fa-info-circle"></i> Détails Camion</h1>
+            </div>
+            <div class="card-body">
+                <table class="table table-bordered">
+                    <tbody>
+                    <tr>
+                        <th>Id</th>
+                        <td>{{ camion.id }}</td>
+                    </tr>
+                    <tr>
+                        <th>Remorque</th>
+                        <td>{{ camion.remorque }}</td>
+                    </tr>
+                    <tr>
+                        <th>Date d'Intégration</th>
+                        <td>{{ camion.dateIntegration ? camion.dateIntegration|date('Y-m-d') : '' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Location</th>
+                        <td>{{ camion.location }}</td>
+                    </tr>
+                    <tr>
+                        <th>Statut</th>
+                        <td>{{ camion.statut }}</td>
+                    </tr>
+                    <tr>
+                        <th>Type Camion</th>
+                        <td>{{ camion.typeCamion.nom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Tracteur</th>
+                        <td>{{ camion.tracteur.nom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Categorie</th>
+                        <td>{{ camion.categorie.nom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Observation</th>
+                        <td>{{ camion.observation }}</td>
+                    </tr>
+                    <tr>
+                        <th>Km Actuel</th>
+                        <td>{{ camion.kmActuel }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <div class="mt-3">
+                    <a href="{{ path('app_camion_index') }}" class="btn btn-secondary">
+                        <i class="fas fa-arrow-left"></i> Retour à la liste
+                    </a>
+                    <a href="{{ path('app_camion_edit', {'id': camion.id}) }}" class="btn btn-primary">
+                        <i class="fas fa-edit"></i> Modifier
+                    </a>
+                    {{ include('camion/_delete_form.html.twig', { 'class': 'd-inline' }) }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
