--- a/templates/mecanicien/edit.html.twig
+++ b/templates/mecanicien/edit.html.twig
@@ -1,34 +1,62 @@
-{% extends 'base.html.twig' %}
+{% extends 'mecanicien/base.html.twig' %}
 
-{% block title %}Edit Mecanicien{% endblock %}
+{% block title %}Modifier Mécanicien{% endblock %}
+
+{% block stylesheets %}
+    <style>
+        .card {
+            border-radius: 0;
+        }
+        .delete{
+            border: 1px solid black;
+            width: 150px;
+            border-radius: 5px;
+            background-color: red;
+            color: white;
+            height: 40px;
+            text-align: center;
+            line-height: 40px;
+            cursor: pointer;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    <div class="container mt-4">
-        <h1>Modifier un Mecanicien</h1>
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header">
+                <h1 class="mb-0"><i class="fas fa-edit"></i> Modifier Mécanicien</h1>
+            </div>
+            <div class="card-body">
+                {{ form_start(form) }}
+                <div class="form-group">
+                    {{ form_label(form.nom) }}
+                    {{ form_widget(form.nom, {'attr': {'class': 'form-control', 'placeholder': 'Nom'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.prenom) }}
+                    {{ form_widget(form.prenom, {'attr': {'class': 'form-control', 'placeholder': 'Prénom'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.contact) }}
+                    {{ form_widget(form.contact, {'attr': {'class': 'form-control', 'placeholder': 'Contact'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.adresse) }}
+                    {{ form_widget(form.adresse, {'attr': {'class': 'form-control', 'placeholder': 'Adresse'}}) }}
+                </div>
+                <button class="btn btn-primary"><i class="fas fa-save"></i> Modifier</button>
+                {{ form_end(form) }}
 
-        {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
-            <div class="form-group">
-                {{ form_label(form.nom, null, {'label_attr': {'class': 'col-form-label'}}) }}
-                {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
+                <div class="mt-3">
+                    <a href="{{ path('app_mecanicien_index') }}" class="btn btn-secondary">
+                        <i class="fas fa-arrow-left"></i> Retour à la liste
+                    </a>
+                    <div class="delete">
+                        {{ include('mecanicien/_delete_form.html.twig', { 'class': 'd-inline' }) }}
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                {{ form_label(form.prenom, null, {'label_attr': {'class': 'col-form-label'}}) }}
-                {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.contact, null, {'label_attr': {'class': 'col-form-label'}}) }}
-                {{ form_widget(form.contact, {'attr': {'class': 'form-control'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.adresse, null, {'label_attr': {'class': 'col-form-label'}}) }}
-                {{ form_widget(form.adresse, {'attr': {'class': 'form-control'}}) }}
-            </div>
-            <div class="d-flex flex-wrap mt-3">
-                <button class="btn btn-primary mr-2">{{ button_label|default('Modifier') }}</button>
-                <a href="{{ path('app_mecanicien_index') }}" class="btn btn-secondary mr-2">Retour</a>
-                {{ include('mecanicien/_delete_form.html.twig') }}
-            </div>
-        {{ form_end(form) }}
-        
+        </div>
     </div>
 {% endblock %}
