--- a/templates/mecanicien/index.html.twig
+++ b/templates/mecanicien/index.html.twig
@@ -1,46 +1,71 @@
-{% extends 'base.html.twig' %}
+{% extends 'mecanicien/base.html.twig' %}
 
-{% block title %}Mecanicien index{% endblock %}
+{% block title %}Liste des Mécaniciens{% endblock %}
+
+{% block stylesheets %}
+    <style>
+        .table th, .table td {
+            vertical-align: middle;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    <div class="container mt-4">
-        <h1 class="text-center mb-4">Gestion des Mecaniciens !</h1>
-        <div class="mb-3 text-left">
-            <a href="{{ path('app_mecanicien_new') }}" class="btn btn-success fa fa-plus">Ajout</a>
-        </div>
+    <div class="container mt-5">
+        <h1 class="mb-4"><i class="fas fa-list"></i> Liste des Mécaniciens</h1>
 
-        <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th>Id</th>
-                    <th>Nom</th>
-                    <th>Prenom</th>
-                    <th>Adresse</th>
-                    <th>Contact</th>
-                    <th class="text-center">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for mecanicien in mecaniciens %}
-                <tr>
-                    <td>{{ mecanicien.id }}</td>
-                    <td>{{ mecanicien.nom }}</td>
-                    <td>{{ mecanicien.prenom }}</td>
-                    <td>{{ mecanicien.adresse }}</td>
-                    <td>{{ mecanicien.contact }}</td>
-                    <td class="td-responsive">
-                        <div class="d-flex flex-wrap justify-content-center align-items-center">
-                            <a href="{{ path('app_mecanicien_edit', {'id': mecanicien.id}) }}" class="btn btn-warning btn-sm mb-1 mr-1">Modifier</a>
-                            {{ include('mecanicien/_delete_form.html.twig', { 'id': mecanicien.id }) }}
-                        </div>
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="6" class="text-center">Aucun Mecanicien n'est Enregistrer !</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        <form method="get" action="{{ path('app_mecanicien_index') }}" class="mb-4">
+            <div class="input-group">
+                <input type="text" name="search" class="form-control" placeholder="Rechercher...">
+                <div class="input-group-append">
+                    <button class="btn btn-secondary" type="submit"><i class="fa fa-search"></i> Rechercher</button>
+                </div>
+            </div>
+        </form>
+
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nom</th>
+                        <th>Prénom</th>
+                        <th>Contact</th>
+                        <th>Adresse</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for mecanicien in mecaniciens %}
+                        <tr>
+                            <td>{{ mecanicien.id }}</td>
+                            <td>{{ mecanicien.nom }}</td>
+                            <td>{{ mecanicien.prenom }}</td>
+                            <td>{{ mecanicien.contact }}</td>
+                            <td>{{ mecanicien.adresse }}</td>
+                            <td>
+                                <a href="{{ path('app_mecanicien_show', {'id': mecanicien.id}) }}" class="btn btn-info btn-sm">
+                                    <i class="fas fa-eye"></i>
+                                </a>
+                                <a href="{{ path('app_mecanicien_edit', {'id': mecanicien.id}) }}" class="btn btn-primary btn-sm">
+                                    <i class="fas fa-edit"></i> 
+                                </a>
+                                <form method="post" action="{{ path('app_mecanicien_delete', {'id': mecanicien.id}) }}" style="display:inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet élément?');">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ mecanicien.id) }}">
+                                    <button class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
+                                </form>
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="6">Aucun enregistrement trouvé</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <a href="{{ path('app_mecanicien_new') }}" class="btn btn-success">
+            <i class="fas fa-plus-circle"></i> Ajouter un nouveau mécanicien
+        </a>
     </div>
 {% endblock %}
