--- a/templates/mecanicien/show.html.twig
+++ b/templates/mecanicien/show.html.twig
@@ -1,40 +1,56 @@
-{% extends 'base.html.twig' %}
+{% extends 'assurance/base.html.twig' %}
 
-{% block title %}Mecanicien{% endblock %}
+{% block title %}Mécanicien{% endblock %}
+
+{% block stylesheets %}
+    <style>
+        .table th, .table td {
+            vertical-align: middle;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    <div class="container mt-4">
-        <h1 class="text-center">Mecanicien</h1>
-
-        <table class="table table-striped table-bordered">
-            <tbody>
-                <tr>
-                    <th>Id</th>
-                    <td>{{ mecanicien.id }}</td>
-                </tr>
-                <tr>
-                    <th>Nom</th>
-                    <td>{{ mecanicien.nom }}</td>
-                </tr>
-                <tr>
-                    <th>Prenom</th>
-                    <td>{{ mecanicien.prenom }}</td>
-                </tr>
-                <tr>
-                    <th>Adresse</th>
-                    <td>{{ mecanicien.adresse }}</td>
-                </tr>
-                <tr>
-                    <th>Contact</th>
-                    <td>{{ mecanicien.contact }}</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <div class="mt-3 d-flex flex-wrap">
-            <a href="{{ path('app_mecanicien_index') }}" class="btn btn-secondary mr-2">Retour</a>
-            <a href="{{ path('app_mecanicien_edit', {'id': mecanicien.id}) }}" class="btn btn-primary mr-2">Modifier</a>
-            {{ include('mecanicien/_delete_form.html.twig') }}
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header">
+                <h1 class="mb-0"><i class="fas fa-info-circle"></i> Détails Mécanicien</h1>
+            </div>
+            <div class="card-body">
+                <table class="table table-bordered">
+                    <tbody>
+                    <tr>
+                        <th>Id</th>
+                        <td>{{ mecanicien.id }}</td>
+                    </tr>
+                    <tr>
+                        <th>Nom</th>
+                        <td>{{ mecanicien.nom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Prénom</th>
+                        <td>{{ mecanicien.prenom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Contact</th>
+                        <td>{{ mecanicien.contact }}</td>
+                    </tr>
+                    <tr>
+                        <th>Adresse</th>
+                        <td>{{ mecanicien.adresse }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <div class="mt-3">
+                    <a href="{{ path('app_mecanicien_index') }}" class="btn btn-secondary">
+                        <i class="fas fa-arrow-left"></i> Retour à la liste
+                    </a>
+                    <a href="{{ path('app_mecanicien_edit', {'id': mecanicien.id}) }}" class="btn btn-primary">
+                        <i class="fas fa-edit"></i> Modifier
+                    </a>
+                    {{ include('mecanicien/_delete_form.html.twig', { 'class': 'd-inline' }) }}
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
